<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">OpenRegatta</string>
    <string name="title_activity_main">OpenRegatta</string>
    
    <string name="boat_settings">Boat Settings</string>
    <string name="network_settings">Network Settings</string>
    <string name="preference_display_settings">Display Settings</string>
    
    <string name="default_value">--</string>
    
    <string name="target_awa">AWA</string>
    <string name="target_sow">SOW</string>
    
    <string name="start">START</string>
    <string name="stop">STOP</string>
    <string name="add_min">+1 Min</string>
    <string name="rem_min">-1 Min</string>
    <string name="add_sec">+1 Sec</string>
    <string name="rem_sec">-1 Sec</string>
    <string name="default_timer">00:00</string>
   
    <string name="distance_start_line">Dist Line</string>
    <string name="eta_start_line">ETA Line</string>
    <string name="boat_lenght_abbrev">BL</string>
    <string name="second_abbrev">s</string>
    <string name="mark_relative">Set Relatively</string>
    <string name="mark_absolute">Set Now</string>
    <string name="upwind_mark_to_set">Please Set Upwing Mark</string>
    <string name="start_line_to_set">Please Set Starting Line</string>
    
    <string name="data_sat_visible">Sat Visible</string>
    <string name="data_sat_fix">Sat Fix</string>
    <string name="data_date">Date</string>
    <string name="data_time">Time</string>
    <string name="data_lat">LAT N</string>
    <string name="data_awa">AWA</string>
    <string name="data_lon">LON E</string>
    <string name="data_aws">AWS</string>
    <string name="data_sow">SOW</string>
    <string name="data_twd">TWD</string>
    <string name="data_sog">SOG</string>
    <string name="data_tws">TWS</string>
    <string name="data_next_wpt">Next WPT</string>
    <string name="data_dtw">DTW</string>
</resources>
