<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@color/backgroundColor">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >
          
          <Button
            android:id="@+id/button_start_stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/start" 
            android:background="@color/backgroundColor"
            android:textColor="@color/textColor"/>"

		<Button
		    android:id="@+id/button_plus_min"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_alignParentLeft="true"
		    android:layout_alignParentTop="true"
		    android:text="@string/add_min" 
		    android:background="@color/backgroundColor"
            android:textColor="@color/textColor"/>

		<Button
		    android:id="@+id/button_plus_sec"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_alignParentRight="true"
		    android:layout_alignParentTop="true"
		    android:text="@string/add_sec" 
		    android:background="@color/backgroundColor"
            android:textColor="@color/textColor"/>

    </RelativeLayout>

    <RelativeLayout
         android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5" > 

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/default_timer"
            android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="120sp"
            android:textColor="@color/textColor" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <Button
            android:id="@+id/button_start_stop2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:text="@string/start" 
            android:background="@color/backgroundColor"
            android:textColor="@color/textColor"/>

        <Button
            android:id="@+id/button_minus_sec"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:text="@string/rem_sec" 
            android:background="@color/backgroundColor"
            android:textColor="@color/textColor"/>

        <Button
            android:id="@+id/button_minus_min"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:text="@string/rem_min" 
            android:background="@color/backgroundColor"
            android:textColor="@color/textColor"/>

    </RelativeLayout>

</LinearLayout>