<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <Button
            android:id="@+id/Button02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@color/backgroundColor"
            android:textColor="@color/textColor"
            android:text="@string/mark_absolute" />

        <Button
            android:id="@+id/button_set_relative"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@color/backgroundColor"
            android:textColor="@color/textColor"
            android:text="@string/mark_relative" />

        <ImageView
            android:id="@+id/imageView_upwind_mark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/button_set_relative"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/upwind_mark_to_set"
            android:src="@drawable/mark" 
            android:background="#FF0000"/>

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/button_set_relative"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="18dp"
            android:text="@string/upwind_mark_to_set"
            android:textColor="@color/textColor" 
            android:textSize="20sp"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <Button
            android:id="@+id/Button_set_start_mark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignTop="@+id/imageView1"
            android:background="@color/backgroundColor"
            android:textColor="@color/textColor"
            android:text="@string/mark_absolute" />

        <Button
            android:id="@+id/Button_set_committee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/imageView2"
            android:background="@color/backgroundColor"
            android:textColor="@color/textColor"
            android:text="@string/mark_absolute" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/Button_set_committee"
            android:src="@drawable/committee"
            android:contentDescription="@string/start_line_to_set"
            android:background="#FF0000" />

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/imageView2"
            android:layout_toRightOf="@+id/Button_set_start_mark"
            android:src="@drawable/mark"
            android:contentDescription="@string/start_line_to_set"
            android:background="#FF0000" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView1"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/start_line_to_set"
            android:textColor="@color/textColor" 
            android:textSize="20sp"/>

    </RelativeLayout>

</LinearLayout>
